# ultra-memory

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md  config.example  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/: FUNDING.yml
commands/: memory-edit.md  memory-inbox.md  memory-maintain.md  memory-pin.md  memory-recall.md  memory-save.md  memory-setup.md  memory-verify.md  wiki-gateway-scaffold.md
docs/: 01-what-is-ultra-memory.md  02-mental-model.md  03-quick-start.md  04-working-with-memory.md  05-self-learning-in-practice.md  06-configuration-reference.md  08-build-your-own-domain.md  09-curating-a-domain.md  10-architecture.md  11-reference-api-schema.md  12-contributing.md  99-design-and-internals.md  ENCOUNTERED_PROBLEMS.md  FEATURES.md  README.md
hooks/: hooks.json  um-hook.cmd
tests/: test_atomic_graduate.py  test_atomic_graduate_e2e.py  test_attribution.py  test_backfill_topic.py  test_bugfix_high.py  test_bugfix_medium.py  test_checkpoint.py  test_claude_cli.py  test_config_notifier.py  test_db.py  test_gate_commons.py  test_hooks.py  test_hooks_common.py  test_hooks_json.py  test_integration_s1_import_export_roundtrip.py  test_integration_s2_write_then_recall.py  test_integration_s3_write_redaction.py  test_integration_s4_mcp_privilege_boundary.py  test_integration_s5_session_hook_cycle.py  test_integration_s6_retention_vs_pins.py  test_integration_s7_inbox_verbs_and_spool.py  test_integration_s8_claude_cli_oauth.py  test_knowledge_mcp.py  test_knowledge_mcp_smoke.py  test_links_writer.py  test_main_notify.py  test_maintain.py  test_maintenance_aggressive_edit.py  (+74 more)
(+99 files in other folders)
