[project]
name = "ultra-memory"
version = "0.0.1"
description = "Project-agnostic agent memory engine + knowledge MCP (Claude plugin)"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
retrieval = ["fastembed>=0.3"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
