[project]
name = "ultra-memory"
version = "0.0.3"
description = "Project-agnostic agent memory engine + knowledge MCP (Claude plugin)"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
retrieval = ["fastembed>=0.3"]
mcp = ["mcp>=1.2"]
# The Tier-2 self-learning maintenance beats (consolidate / aggressive / synthesize):
# PyYAML for the safety wall's frontmatter-provenance parse. Soft-imported, so the
# beats degrade fail-CLOSED-to-safety (every unit immutable) when it is absent.
maintenance = ["PyYAML>=6"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: end-to-end / model-loading tests (e.g. the MCP stdio smoke)",
]
